header mobile version

--- a/public/main.html
+++ b/public/main.html
@@ -15,23 +15,31 @@
     <div class="wrap">
         <div class="header">
             <span class="logo">Your logo</span>
-            <ul class="navbar">
-                <li>Home</li>
-                <li>About</li>
-                <li>Servicing</li>
-                <li>Portfolio</li>
-                <li>Blog</li>
-                <li>Contact us</li>
-                <li><img src="image/general/search.png" alt="search"></li>
-            </ul>
-            <div class="hiddenMenu">
-                <div class="hamburger"></div>
-                <ul class="hiddenNavig">
+            <div class="mainMenu">
+                <ul class="navbar">
                     <li>Home</li>
                     <li>About</li>
                     <li>Servicing</li>
                     <li>Portfolio</li>
-                    <li>Blog</li>
+                    <li>Contact us</li>
+                </ul>
+                <div class="search">
+                    <input type="search" name="search">
+                    <img src="image/general/search.png" alt="search">
+                </div>
+            </div>
+
+            <div class="hiddenMenu">
+                <div class="hamburger"></div>
+                <ul class="hiddenNavig">
+                    <div class="hiddenSearch">
+                        <input type="search" name="search">
+                        <img src="image/general/search.png" alt="search">
+                    </div>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Servicing</li>
+                    <li>Portfolio</li>
                     <li>Contact us</li>
                 </ul>
             </div>
