added Web Development div

--- a/public/main.html
+++ b/public/main.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/adaptive/aMain.css">
+    <link rel="stylesheet" href="css/mobile/mMain.css">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/adaptive/aGeneral.css">
     <link rel="stylesheet" href="css/mobile/mGeneral.css">
@@ -43,6 +45,17 @@
                     <li>Contact us</li>
                 </ul>
             </div>
+        </div>
+        <div class="webDevelopment">
+            <div class="title">
+                <span>Web development project</span>
+                <span>Very suitable to support all web development projects</span>
+            </div>
+            <div class="buttonContainer">
+                <div class="button button1">OUR SERVICES</div>
+                <div class="button button2">HIRE IS NOW</div>
+            </div>
+            <div class="arrow"></div>
         </div>
     </div>
 </body>
