--- a/public/main.html
+++ b/public/main.html
@@ -57,6 +57,29 @@
             </div>
             <div class="arrow"></div>
         </div>
+        <div class="aboutUs">
+            <div class="title">
+                <span>About Us</span>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+            </div>
+            <div class="cardContainer">
+                <div class="card">
+                    <img src="image/main/aboutUs/internet.png" alt="internet">
+                    <span>Awesome Icons</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
+                </div>
+                <div class="card">
+                    <img src="image/main/aboutUs/transfer.png" alt="internet">
+                    <span>One Page</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
+                </div>
+                <div class="card">
+                    <img src="image/main/aboutUs/head.png" alt="internet">
+                    <span>Fully Responsive</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
