removed some folders

--- a/public/main.html
+++ b/public/main.html
@@ -64,17 +64,17 @@
             </div>
             <div class="cardContainer">
                 <div class="card">
-                    <img src="image/main/aboutUs/internet.png" alt="internet">
+                    <img src="image/main/internet.png" alt="internet">
                     <span>Awesome Icons</span>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
                 </div>
                 <div class="card">
-                    <img src="image/main/aboutUs/transfer.png" alt="internet">
+                    <img src="image/main/transfer.png" alt="internet">
                     <span>One Page</span>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
                 </div>
                 <div class="card">
-                    <img src="image/main/aboutUs/head.png" alt="internet">
+                    <img src="image/main/head.png" alt="internet">
                     <span>Fully Responsive</span>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
                 </div>
