Added Our Services div

--- a/public/main.html
+++ b/public/main.html
@@ -80,6 +80,50 @@
                 </div>
             </div>
         </div>
+        <div class="ourServices">
+            <div class="title">
+                <span>Our Services</span>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+            </div>
+            <div class="cardContainer">
+                <div class="card">
+                    <div class="logo"></div>
+                    <span>Research</span>
+                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                    <div class="button">READ MORE</div>
+                </div>
+                <div class="card">
+                    <div class="logo"></div>
+                    <span>Research</span>
+                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                    <div class="button">READ MORE</div>
+                </div>
+                <div class="card">
+                    <div class="logo"></div>
+                    <span>Research</span>
+                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                    <div class="button">READ MORE</div>
+                </div>
+                <div class="card">
+                    <div class="logo"></div>
+                    <span>Research</span>
+                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                    <div class="button">READ MORE</div>
+                </div>
+                <div class="card">
+                    <div class="logo"></div>
+                    <span>Research</span>
+                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                    <div class="button">READ MORE</div>
+                </div>
+                <div class="card">
+                    <div class="logo"></div>
+                    <span>Research</span>
+                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                    <div class="button">READ MORE</div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
