--- a/public/main.html
+++ b/public/main.html
@@ -124,6 +124,23 @@
                 </div>
             </div>
         </div>
+        <div class="lastestWork">
+            <div class="title">
+                <span>Latest Works</span>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+            </div>
+            <div class="goods">
+                <div class="buttonContainer">
+                    <div class="button">ALL</div>
+                    <div class="button">WEB DESIGN</div>
+                    <div class="button">UI/UX DESIGN</div>
+                    <div class="button">MOCKUPS</div>
+                </div>
+                <div class="cardContainer">
+
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
