--- a/public/main.html
+++ b/public/main.html
@@ -141,6 +141,65 @@
                 </div>
             </div>
         </div>
+        <div class="pricingPlan">
+            <div class="title">
+                <span>Pricing Plan</span>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+            </div>
+            <div class="cardContainer">
+                <div class="card">
+                    <div class="cardHeader">
+                        <span>Free Trial</span>
+                        <div class="price">
+                            <span>$</span>
+                            <span>00</span>
+                            <span>per month</span>
+                        </div>
+                    </div>
+                    <div class="cardContent">
+                        <span>30 Free Trial</span>
+                        <span>5 Free Projects</span>
+                        <span>PHP 5 Enabled</span>
+                        <span>24/7 Suports</span>
+                        <div class="button">Order Now</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="cardHeader">
+                        <span>Free Trial</span>
+                        <div class="price">
+                            <span>$</span>
+                            <span>50</span>
+                            <span>per month</span>
+                        </div>
+                    </div>
+                    <div class="cardContent">
+                        <span>30 Free Trial</span>
+                        <span>5 Free Projects</span>
+                        <span>PHP 5 Enabled</span>
+                        <span>24/7 Suports</span>
+                        <div class="button">Order Now</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="cardHeader">
+                        <span>Free Trial</span>
+                        <div class="price">
+                            <span>$</span>
+                            <span>99</span>
+                            <span>per month</span>
+                        </div>
+                    </div>
+                    <div class="cardContent">
+                        <span>30 Free Trial</span>
+                        <span>5 Free Projects</span>
+                        <span>PHP 5 Enabled</span>
+                        <span>24/7 Suports</span>
+                        <div class="button">Order Now</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
