added team block, added slide (not adapted to mobile)

--- a/public/main.html
+++ b/public/main.html
@@ -200,6 +200,21 @@
                 </div>
             </div>
         </div>
+        <div class="ourTeam">
+            <div class="title">
+                <span>Our Team Member</span>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+            </div>
+            <div class="slider">
+                <div class="slideContainer">
+                </div>
+                <div class="sliderNavig">
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
