--- a/public/main.html
+++ b/public/main.html
@@ -14,204 +14,208 @@
     <title>Main page</title>
 </head>
 <body>
-    <div class="wrap">
-        <div class="header">
-            <span class="logo">Your logo</span>
-            <div class="mainMenu">
-                <ul class="navbar">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Servicing</li>
-                    <li>Portfolio</li>
-                    <li>Contact us</li>
-                </ul>
-                <div class="search">
-                    <input type="search" name="search">
-                    <img src="image/general/search.png" alt="search">
-                </div>
-            </div>
-
-            <div class="hiddenMenu">
-                <div class="hamburger"></div>
-                <ul class="hiddenNavig">
-                    <div class="hiddenSearch">
+    <div class="background">
+        <div class="wrap">
+            <div class="header">
+                <span class="logo">Your logo</span>
+                <div class="mainMenu">
+                    <ul class="navbar">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Servicing</li>
+                        <li>Portfolio</li>
+                        <li>Contact us</li>
+                    </ul>
+                    <div class="search">
                         <input type="search" name="search">
                         <img src="image/general/search.png" alt="search">
                     </div>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Servicing</li>
-                    <li>Portfolio</li>
-                    <li>Contact us</li>
-                </ul>
-            </div>
-        </div>
-        <div class="webDevelopment">
-            <div class="title">
-                <span>Web development project</span>
-                <span>Very suitable to support all web development projects</span>
-            </div>
-            <div class="buttonContainer">
-                <div class="button button1">OUR SERVICES</div>
-                <div class="button button2">HIRE IS NOW</div>
-            </div>
-            <div class="arrow"></div>
-        </div>
-        <div class="aboutUs">
-            <div class="title">
-                <span>About Us</span>
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-            </div>
-            <div class="cardContainer">
-                <div class="card">
-                    <img src="image/main/internet.png" alt="internet">
-                    <span>Awesome Icons</span>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
                 </div>
-                <div class="card">
-                    <img src="image/main/transfer.png" alt="internet">
-                    <span>One Page</span>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
-                </div>
-                <div class="card">
-                    <img src="image/main/head.png" alt="internet">
-                    <span>Fully Responsive</span>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</span>
+
+                <div class="hiddenMenu">
+                    <div class="hamburger"></div>
+                    <ul class="hiddenNavig">
+                        <div class="hiddenSearch">
+                            <input type="search" name="search">
+                            <img src="image/general/search.png" alt="search">
+                        </div>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Servicing</li>
+                        <li>Portfolio</li>
+                        <li>Contact us</li>
+                    </ul>
                 </div>
             </div>
-        </div>
-        <div class="ourServices">
-            <div class="title">
-                <span>Our Services</span>
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-            </div>
-            <div class="cardContainer">
-                <div class="card">
-                    <div class="logo"></div>
-                    <span>Research</span>
-                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
-                    <div class="button">READ MORE</div>
+            <div class="webDevelopment">
+                <div class="title">
+                    <span>WEB разработка</span>
+                    <span>Приложения доступные для каждого!</span>
                 </div>
-                <div class="card">
-                    <div class="logo"></div>
-                    <span>Research</span>
-                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
-                    <div class="button">READ MORE</div>
-                </div>
-                <div class="card">
-                    <div class="logo"></div>
-                    <span>Research</span>
-                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
-                    <div class="button">READ MORE</div>
-                </div>
-                <div class="card">
-                    <div class="logo"></div>
-                    <span>Research</span>
-                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
-                    <div class="button">READ MORE</div>
-                </div>
-                <div class="card">
-                    <div class="logo"></div>
-                    <span>Research</span>
-                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
-                    <div class="button">READ MORE</div>
-                </div>
-                <div class="card">
-                    <div class="logo"></div>
-                    <span>Research</span>
-                    <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
-                    <div class="button">READ MORE</div>
-                </div>
-            </div>
-        </div>
-        <div class="lastestWork">
-            <div class="title">
-                <span>Latest Works</span>
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-            </div>
-            <div class="goods">
                 <div class="buttonContainer">
-                    <div class="button">ALL</div>
-                    <div class="button">WEB DESIGN</div>
-                    <div class="button">UI/UX DESIGN</div>
-                    <div class="button">MOCKUPS</div>
+                    <div class="button button1">НАШИ УСЛУГИ</div>
+                    <div class="button button2">ЗАКАЗАТЬ</div>
+                </div>
+                <div class="arrow"></div>
+            </div>
+            <div class="aboutUs">
+                <div class="title">
+                    <span>О НАС</span>
+                    <span>Наша команда занимается разработкой WEB приложений на протяжении 10 лет.
+                          Станьте нашим клиеннтом и мы гарантируем качество конечного продукта!
+                    </span>
                 </div>
                 <div class="cardContainer">
+                    <div class="card">
+                        <img src="image/main/internet.png" alt="internet">
+                        <span>Отличный дизайн</span>
+                        <span>Качественные иконки, сочетания цветов, шрифты и анимационные эффекты сделают ваш сайт выделяющимся и запоминающимся!</span>
+                    </div>
+                    <div class="card">
+                        <img src="image/main/transfer.png" alt="internet">
+                        <span>Одностраничники</span>
+                        <span>Делаем быстро и качественно сайты-визитки!</span>
+                    </div>
+                    <div class="card">
+                        <img src="image/main/head.png" alt="internet">
+                        <span>Полная отзывчивость</span>
+                        <span>Наши приложения отлично работают на всех устройствах!</span>
+                    </div>
+                </div>
+            </div>
+            <div class="ourServices">
+                <div class="title">
+                    <span>Our Services</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                </div>
+                <div class="cardContainer">
+                    <div class="card">
+                        <div class="logo"></div>
+                        <span>Research</span>
+                        <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                        <div class="button">READ MORE</div>
+                    </div>
+                    <div class="card">
+                        <div class="logo"></div>
+                        <span>Research</span>
+                        <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                        <div class="button">READ MORE</div>
+                    </div>
+                    <div class="card">
+                        <div class="logo"></div>
+                        <span>Research</span>
+                        <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                        <div class="button">READ MORE</div>
+                    </div>
+                    <div class="card">
+                        <div class="logo"></div>
+                        <span>Research</span>
+                        <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                        <div class="button">READ MORE</div>
+                    </div>
+                    <div class="card">
+                        <div class="logo"></div>
+                        <span>Research</span>
+                        <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                        <div class="button">READ MORE</div>
+                    </div>
+                    <div class="card">
+                        <div class="logo"></div>
+                        <span>Research</span>
+                        <span>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</span>
+                        <div class="button">READ MORE</div>
+                    </div>
+                </div>
+            </div>
+            <div class="lastestWork">
+                <div class="title">
+                    <span>Latest Works</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                </div>
+                <div class="goods">
+                    <div class="buttonContainer">
+                        <div class="button">ALL</div>
+                        <div class="button">WEB DESIGN</div>
+                        <div class="button">UI/UX DESIGN</div>
+                        <div class="button">MOCKUPS</div>
+                    </div>
+                    <div class="cardContainer">
 
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="pricingPlan">
-            <div class="title">
-                <span>Pricing Plan</span>
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-            </div>
-            <div class="cardContainer">
-                <div class="card">
-                    <div class="cardHeader">
-                        <span>Free Trial</span>
-                        <div class="price">
-                            <span>$</span>
-                            <span>00</span>
-                            <span>per month</span>
+            <div class="pricingPlan">
+                <div class="title">
+                    <span>Pricing Plan</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                </div>
+                <div class="cardContainer">
+                    <div class="card">
+                        <div class="cardHeader">
+                            <span>Free Trial</span>
+                            <div class="price">
+                                <span>$</span>
+                                <span>00</span>
+                                <span>per month</span>
+                            </div>
+                        </div>
+                        <div class="cardContent">
+                            <span>30 Free Trial</span>
+                            <span>5 Free Projects</span>
+                            <span>PHP 5 Enabled</span>
+                            <span>24/7 Suports</span>
+                            <div class="button">Order Now</div>
                         </div>
                     </div>
-                    <div class="cardContent">
-                        <span>30 Free Trial</span>
-                        <span>5 Free Projects</span>
-                        <span>PHP 5 Enabled</span>
-                        <span>24/7 Suports</span>
-                        <div class="button">Order Now</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <span>Free Trial</span>
-                        <div class="price">
-                            <span>$</span>
-                            <span>50</span>
-                            <span>per month</span>
+                    <div class="card">
+                        <div class="cardHeader">
+                            <span>Free Trial</span>
+                            <div class="price">
+                                <span>$</span>
+                                <span>50</span>
+                                <span>per month</span>
+                            </div>
+                        </div>
+                        <div class="cardContent">
+                            <span>30 Free Trial</span>
+                            <span>5 Free Projects</span>
+                            <span>PHP 5 Enabled</span>
+                            <span>24/7 Suports</span>
+                            <div class="button">Order Now</div>
                         </div>
                     </div>
-                    <div class="cardContent">
-                        <span>30 Free Trial</span>
-                        <span>5 Free Projects</span>
-                        <span>PHP 5 Enabled</span>
-                        <span>24/7 Suports</span>
-                        <div class="button">Order Now</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="cardHeader">
-                        <span>Free Trial</span>
-                        <div class="price">
-                            <span>$</span>
-                            <span>99</span>
-                            <span>per month</span>
+                    <div class="card">
+                        <div class="cardHeader">
+                            <span>Free Trial</span>
+                            <div class="price">
+                                <span>$</span>
+                                <span>99</span>
+                                <span>per month</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="cardContent">
-                        <span>30 Free Trial</span>
-                        <span>5 Free Projects</span>
-                        <span>PHP 5 Enabled</span>
-                        <span>24/7 Suports</span>
-                        <div class="button">Order Now</div>
+                        <div class="cardContent">
+                            <span>30 Free Trial</span>
+                            <span>5 Free Projects</span>
+                            <span>PHP 5 Enabled</span>
+                            <span>24/7 Suports</span>
+                            <div class="button">Order Now</div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="ourTeam">
-            <div class="title">
-                <span>Our Team Member</span>
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-            </div>
-            <div class="slider">
-                <div class="slideContainer">
+            <div class="ourTeam">
+                <div class="title">
+                    <span>Our Team Member</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
-                <div class="sliderNavig">
-                    <div class="button"></div>
-                    <div class="button"></div>
-                    <div class="button"></div>
+                <div class="slider">
+                    <div class="slideContainer">
+                    </div>
+                    <div class="sliderNavig">
+                        <div class="button"></div>
+                        <div class="button"></div>
+                        <div class="button"></div>
+                    </div>
                 </div>
             </div>
         </div>
