fixed ,obile slider

--- a/public/main.html
+++ b/public/main.html
@@ -62,7 +62,7 @@
                 <div class="title">
                     <span>О НАС</span>
                     <span>Наша команда занимается разработкой WEB приложений на протяжении 10 лет.
-                          Станьте нашим клиеннтом и мы гарантируем качество конечного продукта!
+                          Станьте нашим клиентом и мы гарантируем качество конечного продукта!
                     </span>
                 </div>
                 <div class="cardContainer">
@@ -208,13 +208,32 @@
                     <span>Our Team Member</span>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
-                <div class="slider">
-                    <div class="slideContainer">
+
+                <div class="mSlider">
+                    <div class="bLeft">&lt</div>
+                    <div class="slider">
+                        <div class="slideContainer">
+                        </div>
+                        <div class="sliderNavig">
+                            <div class="button"></div>
+                            <div class="button"></div>
+                            <div class="button"></div>
+                        </div>
                     </div>
-                    <div class="sliderNavig">
-                        <div class="button"></div>
-                        <div class="button"></div>
-                        <div class="button"></div>
+                    <div class="bRight">&gt</div>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="title">
+                    <span>Blog</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                        elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                        magna aliqua. Ut enim ad minim veniam,</span>
+                </div>
+                <div class="adGrid">
+                    <img src="image/adGrid/1.jpg" alt="">
+                    <div>
+                        123
                     </div>
                 </div>
             </div>
