--- a/public/main.html
+++ b/public/main.html
@@ -230,12 +230,8 @@
                         elit, sed do eiusmod tempor incididunt ut labore et dolore 
                         magna aliqua. Ut enim ad minim veniam,</span>
                 </div>
-                <div class="adGrid">
-                    <img src="image/adGrid/1.jpg" alt="">
-                    <div>
-                        123
-                    </div>
-                </div>
+                <div class="adGrid"></div>
+                <div class="button">MORE VIEW</div>
             </div>
         </div>
     </div>
