added background and styles

--- a/public/main.html
+++ b/public/main.html
@@ -17,7 +17,7 @@
     <div class="background">
         <div class="wrap">
             <div class="header">
-                <span class="logo">Your logo</span>
+                <span class="logo">Web Development</span>
                 <div class="mainMenu">
                     <ul class="navbar">
                         <li>Home</li>
