main page finished

--- a/public/main.html
+++ b/public/main.html
@@ -16,7 +16,7 @@
 <body>
     <div class="background">
         <div class="wrap">
-            <div class="header">
+            <header>
                 <span class="logo">Web Development</span>
                 <div class="mainMenu">
                     <ul class="navbar">
@@ -46,7 +46,7 @@
                         <li>Contact us</li>
                     </ul>
                 </div>
-            </div>
+            </header>
             <div class="webDevelopment">
                 <div class="title">
                     <span>WEB разработка</span>
@@ -233,6 +233,42 @@
                 <div class="adGrid"></div>
                 <div class="button">MORE VIEW</div>
             </div>
+            <div class="contactUs">
+                <div class="title">
+                    <span>Contact Us</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                      elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                      magna aliqua. Ut enim ad minim veniam,</span>
+                </div>
+                <div class="contacts">
+                    <div class="contactsInfo">
+                        <div class="info">
+                            <div class="icon"></div>
+                            <span>Nobinagar savar</span>
+                            <span>Dhaka Bangladesh</span>
+                        </div>
+                        <div class="info">
+                            <div class="icon"></div>
+                            <span>+8801743331996</span>
+                            <span>+8801928737807</span>
+                        </div>
+                        <div class="info">
+                            <div class="icon"></div>
+                            <span>quickmasud@gmail.com</span>
+                            <span>quickmasud@yahoo.com</span>
+                        </div>
+                    </div>
+                    <form action="/sendMail">
+                        <input type="text" placeholder="Введите ваше имя" name="name" id="iName">
+                        <input type="email" placeholder="Введите ваш email" name="email" id="iEmail">
+                        <textarea name="message" placeholder="Ваше сообщение" cols="30" rows="10" id="taMessage" ></textarea>
+                        <input type="submit" value="Отправить">
+                    </form>
+                </div>
+            </div>
+            <footer>
+                <span>Все права защищены 2022</span>
+            </footer>
         </div>
     </div>
 </body>
