--- a/public/main.html
+++ b/public/main.html
@@ -258,7 +258,7 @@
                             <span>quickmasud@yahoo.com</span>
                         </div>
                     </div>
-                    <form action="/sendMail">
+                    <form method="post" action="/sendMail">
                         <input type="text" placeholder="Введите ваше имя" name="name" id="iName">
                         <input type="email" placeholder="Введите ваш email" name="email" id="iEmail">
                         <textarea name="message" placeholder="Ваше сообщение" cols="30" rows="10" id="taMessage" ></textarea>
